Task 837: Cálculo e posicionamento do(s) aporte(s). Task 1132: Calculo de Distribuição dos Aportes em c++.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,7 @@ add_library(ContinentalLandscapeEvolutionModel
     src/domain/SimulationLandscapeEvolutionModelConfig.cpp
     src/domain/GrainDispersionConfig.cpp
     src/domain/StreamDefinitionThresholdType.cpp
+    src/domain/SedimentaryInputContent.cpp
     src/domain/definition/SlopeTypes.cpp
     src/domain/definition/SlopeUnits.cpp
     src/domain/definition/GrainNames.cpp
@@ -64,6 +65,7 @@ add_library(ContinentalLandscapeEvolutionModel
     src/service/EroderAlgorithmService.cpp
     src/service/HydroToolsAlgorithmService.cpp
     src/service/UpliftAlgorithmService.cpp
+    src/service/SedimentaryInputService.cpp
     src/util/RasterFileUtil.cpp
     src/util/ProcessLandscapeEvolutionModelLogUtil.cpp
 )
